<resources>
    <string name="app_name">Padelbook</string>
    <string name="google_api_key_padelbook">AIzaSyCG5Iu44mfd-f0YcnQMqEvIiBkdbDp6VpE</string>
    <string name="facebook_app_id">514851226722961</string>
    <string name="fb_login_protocol_scheme">fb514851226722961</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">Or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="mobile">Mobile</string>
    <string name="confirm">Confirm</string>
    <string name="i_accept_terms_and_conditions">I accept <u>terms and conditions</u></string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="headingText">What do you think your level is?</string>
    <string name="title">Level</string>
    <string name="description">Important! Do not underestimate or overestimate your level. We all want fair and fun games! Give an honest answer.</string>
    <string name="questionData">Ποιο είναι το φύλο σου;</string>
    <string name="home_heading">Do you want</string>
    <string name="terms_n_conditions">terms</string>
    <string name="title_two">Find Court</string>
    <string name="menu_one">Notifications</string>
    <string name="menu_two">Bookings</string>
    <string name="menu_three">Courts</string>
    <string name="menu_four">Matches</string>
    <string name="menu_five">Contacts</string>
    <string name="menu_six">Results</string>
    <string name="menu_seven">Settings</string>
    <string name="menu_eight">Log out</string>
    <string name="game_heading">Your request to join the match has been sent</string>
    <string name="game_heading_two">You have joined the match</string>
    <string name="game_description">Host player will have to accept your request. You will receive a notification.</string>
    <string name="game_description_accept">You can see the details of the match in your bookings.</string>
    <string name="game_button">View booking</string>
    <string name="addtobook_title">The request has been sent!</string>
    <string name="addtobook_description">A notification has been sent to this player and he has to confirm his/her participation.</string>
    <string name="heading">Search contact...</string>
    <string name="tvHeading">Κωνσταντίνα Σπιλιωπ..</string>
    <string name="olympico_padel_club_glyfada">Olympico Padel Club Glyfada</string>
    <string name="game_title">Join the match</string>
    <string name="quest_button_text">Επόμενο</string>
    <string name="ques_frstoption">Άντρας</string>
    <string name="quest_secndoption">Γυναίκα</string>
    <string name="quest_secndoptionn">Woman</string>
    <string name="woman">Woman</string>
    <string name="quest_text">Ποιο είναι το φύλο σου</string>
    <string name="popup_title">Congrats! your level is</string>
    <string name="popup_buttntext">Smash it!</string>
    <string name="popup_description">You are ready to start! Your level is indicative and it will automatically adjust, with the results of your matches.</string>
    <string name="beginner_des">Is considered to be the player who has not yet gained experience, trying to feel comfortable with hits and find the positioning in the court.</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="intermediate_high">Intermediate high</string>
    <string name="advanced">Advanced</string>
    <string name="master">Master</string>
    <string name="home_heading_two">παίξεις;</string>
    <string name="tv_filter">Filters</string>
    <string name="olympico_padel_club_4">Olympico Padel Club Glyfada - 4km</string>
    <string name="_10_9_20_00_90">Tomorrow, 11/9 | 20:00 | 90\'</string>
    <string name="selector_text">Confirmed</string>
    <string name="name_text">Γιώργος Α.</string>
    <string name="_1_85">1.85</string>
    <string name="_3_6">Σήμερα 3 διαθέσιμα Αύριο 6 διαθέσιμα</string>
    <string name="_30_6988555444">+30 6988555444</string>
    <string name="list_item">Γήπεδα Padel</string>
    <string name="_5_4">Ανθέων 5, Γλυφάδα, Αττική - 4χλμ.</string>
    <string name="ratings">Ratings</string>
    <string name="_6">From 6€ per person</string>
    <string name="from">From</string>
    <string name="perperson">€ per person</string>
    <string name="_10_20_00_21_30">Thursday 14 Sep 18:30 - 20:00</string>
    <string name="court_1_closed">Court 1 | Closed</string>
    <string name="_90_min">90 min</string>
    <string name="toolbar_heading">Matches</string>
    <string name="pay_your_part">Pay your part</string>
    <string name="_12_00">12.00€</string>
    <string name="games_data">The rest of the players will have to pay their part by the end of the match. If they don’t pay, you will be asked to pay the full amount of the court.</string>
    <string name="games_data_public">Your payment will be processed only when the booking is confirmed. Booking will be confirmed when all player spots are full.</string>
    <string name="games_data2">You are paying on behalf of all players.</string>
    <string name="_24">Cancellation policy:</string>
    <string name="_24_">hours</string>
    <string name="club">Pay at the club</string>
    <string name="profile">Profile</string>
    <string name="availability">Availability</string>
    <string name="not_available">Not available</string>
    <string name="available">Available</string>
    <string name="start_a_match">Start a match</string>
    <string name="cancel_policy_data">You can cancel your booking prior to the hours of the cancellation policy</string>
    <string name="pay_your_all_amounts">Pay all the amount</string>
    <string name="padel_courts">Padel Courts</string>
    <string name="nearby">Near by</string>
    <string name="_13_00_18_00">Today | 13:00 - 18:00</string>
    <string name="padel_court_heading">Location</string>
    <string name="locText">Γλυφάδα</string>
    <string name="serach_area">Search for area or address</string>
    <string name="recent_search">Recent searches</string>
    <string name="timeSlot">Date and time</string>
    <string name="timeslotTwo">What time?</string>
    <string name="_5">Availability results will show +5 hours from the chosen time</string>
    <string name="time_slot_but">View results</string>
    <string name="unselector_text">Pending participants</string>
    <string name="avalaiblespot">Διαθέσιμη θέση</string>
    <string name="my_contacts">My contacts</string>
    <string name="view_padelbook_contacts">View padelbook contacts</string>
    <string name="last_index_value">See more</string>
    <string name="otp_title">Confirm mobile number</string>
    <string name="_1_17">Resend code in </string>
    <string name="verify_otp">Verify OTP</string>
    <string name="filters">Filters</string>
    <string name="search_filters">Search filter</string>
    <string name="sorting">Sorting</string>
    <string name="price">Price</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="distance_in_km">Distance in km.</string>
    <string name="all">All</string>
    <string name="duration">Duration</string>
    <string name="_60_min">60 min</string>
    <string name="_120_min">120 min</string>
    <string name="court_type">Court type</string>
    <string name="no_roof">No roof</string>
    <string name="indoors">Indoors</string>
    <string name="closed">Indoors</string>
    <string name="court_size">Court size</string>
    <string name="full_size">Double</string>
    <string name="single">Single</string>
    <string name="view_16_results">View results</string>
    <string name="add_players">Add players</string>
    <string name="request_text">Request</string>
    <string name="invite">Invite</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="member">Member</string>
    <string name="court_available">Κράτηση γηπέδου</string>
    <string-array name="searchfirst">
        <item>Γήπεδα Padel</item>
        <item>Γήπεδα Padel</item>
        <item>Γήπεδα Padel</item>
    </string-array>
    <string name="gender">Gender</string>
    <string-array name="language">
        <item>English</item>
        <item>Greek</item>
    </string-array>
    <string name="new_google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCG5Iu44mfd-f0YcnQMqEvIiBkdbDp6VpE</string>
    <string name="api_key">
        AIzaSyCG5Iu44mfd-f0YcnQMqEvIiBkdbDp6VpE</string>
    <string name="choose_payment">Choose payment</string>
    <string name="booking_details">Booking details</string>
    <string name="home_bottom">View all</string>
    <string name="game_score">Game Score</string>
    <string name="seekbarlabel">  up to km</string>
    <string name="club_pass">Club pass</string>
    <string name="help">Help</string>
    <string name="notification_des">Your game at</string>
    <string name="is_on">is on</string>
    <string name="notify_subdes">5 min ago</string>
    <string name="bookin_head1">All</string>
    <string name="booking_head2">Confirmed</string>
    <string name="booking_head3">Pending</string>
    <string name="booking_head4">Past</string>
    <string name="favourites">Favorite</string>
    <string name="result_head2">Wins</string>
    <string name="result_head3">Defeats</string>
    <string name="panda_padel_courts_12">Panda Padel Courts - 12km</string>
    <string name="_16_10_21_30">Tuesday, 16/10 | 21:30</string>
    <string name="add_score">Add score</string>
    <string name="add_result_titlte">Please confirm the match results</string>
    <string name="result_button">Yes, I confirm</string>
    <string name="addResult_description">You can view all matches results from the menu item "Matches results"</string>
    <string name="tv_info">Learn more about levels</string>
    <string name="result_data">Add the score of the match for every set. Score affects your level long term.</string>
    <string name="setting_headone">Credentials</string>
    <string name="setting_field_one">Name</string>
    <string name="setting_field_two">Password</string>
    <string name="changepassword"><u>change password</u></string>
    <string name="change_password_two">Change Password</string>
    <string name="profile_field">Gender</string>
    <string name="profile_field_two">Date of birth</string>
    <string name="profile_field_three">Level</string>
    <string name="location">Location</string>
    <string name="setting_heading_three">Extra information</string>
    <string name="toggle_des">Use automatic location</string>
    <string name="field_three">Privacy policy</string>
    <string name="field_four">Terms of use</string>
    <string name="app_version">App version: </string>
    <string name="version">version</string>
    <string name="version_10_beta_22_11_2021">Έκδοση εφαρμογής: version 10 (beta) 22/11/2021</string>
    <string name="icon_first_text">Phone</string>
    <string name="icon_second_text">Website</string>
    <string name="icon_third_text">Drive</string>
    <string name="fewWords">About the club</string>
    <string name="about_club">A unique padel club with 6 double courts and 1 single is open and available for you in Southern suburbs.</string>
    <string name="club_facility">Amenities</string>
    <string name="openingHourdTitle">Working hours</string>
    <string name="mon_lab">Monday</string>
    <string name="mon_time">8.00 - 23.00</string>
    <string name="tues_lab">Tuesday</string>
    <string name="sms_message">Send SMS</string>
    <string name="canceltext">No, I do not want to</string>
    <string name="oktext">Yes</string>
    <string name="cancel_text_two">Do you want to cancel it request to participate?</string>
    <string name="no_result_text_second">You can book a court\n or start a public match</string>
</resources>