<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardBackgroundColor="@color/white"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:paddingVertical="@dimen/_12sdp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_15sdp"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/imagePopup"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:src="@drawable/ic_line_phone_hand"/>


    <TextView
        android:id="@+id/heading"
        style="@style/tvBold"
        android:layout_width="wrap_content"
        android:text="@string/popup_title"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="@dimen/_15sdp"
        android:textSize="@dimen/_13sdp"/>


    <TextView
        android:id="@+id/tvDes"
        style="@style/tvBold"
        android:text="@string/popup_description"
        android:gravity="center_horizontal"
        android:textColor="@color/text_hint_color"
        android:layout_marginVertical="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:textSize="@dimen/_11ssp"/>

        <TextView
            android:id="@+id/butSms"
            style="@style/buttonStyle"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/round_corner_blue"
            android:text="@string/sms_message"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/popupSubmit"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/round_corner_blue"
        android:text="@string/popup_buttntext"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_alignParentBottom="true" />


    </LinearLayout>

</androidx.cardview.widget.CardView>