<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardBackgroundColor="@color/white"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:paddingVertical="@dimen/_12sdp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/ic_line_phone_hand"/>


        <TextView
            android:id="@+id/tvTile"
            style="@style/tvBold"
            android:layout_width="wrap_content"
            android:text="@string/cancel_text_two"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/_2sdp"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:textSize="@dimen/_13sdp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_18sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancel"
                style="@style/buttonStyle"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/round_corner_blue"
                android:text="@string/canceltext" />

            <TextView
                android:id="@+id/tvNo"
                style="@style/buttonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red_color"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@drawable/round_corner_blue"
                android:text="@string/oktext" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>